	  the application server property and the servlet context.
	  This change makes it easy to redeploy the generated WAR file (with just change in the name
	  of the WAR if desired/necessary), without any needed internal changes. 
	  
	- Removed "vine.service.url" property and associated config methods from everywhere as it is not used.
	  

2009-09-11  1.5.0.alpha21
	- General user account management, login, and password reset completed:
		Fixed issue #176: login issue - forgot password user name
		Fixed Issue #173: user phone number can not be changes
	- See iserver's changelog.
	- Check email address before creating/updating a user account. Ideally, a full verification
	  would include using the email (eg., sending some special URL that the user can click to
	  verify/activate his/her account).
	- Removed LoginListener (not needed anymore-- TODO lots of old code to be removed)
		
	- TODO Next: use cookies to keep the session (Issue #154)




2009-09-10  1.5.0.alpha20

	- various adjustments to dispatch user account creation/update
	- user account creation/update: updates in iserver
	
	
	- Renamed Config to PortalConfig
	- PortalConfig: new properties: MAIL_USER, MAIL_PASSWORD
	- Renamed UserPanel to LoginPanel
	- Removed class Login (now using iserver's service authenticateUser)
	- LoginPanel now with options to: 
		- reset password - working
		- create account - preliminary code
	- {activation,mail}.jar included included to support iserver's MailSender helper.

	
2009-09-09  1.5.0.alpha19
	- Fixed a bug in OntologyPanel related with the mechanism to set shortName and authority.
	  It was using the createOntologyInfo object by calling createOntologyInfo.{getAuthority(),getShortName()},
	  but these attributes have not been assigned from the newValues map!
	  It must be a regression problem.
	  Temporary quick fix: assign 
	  	authority = newValues.get("http://mmisw.org/ont/mmi/20081020/ontologyMetadata/origMaintainerCode")