@@ -123,8 +123,6 @@
 				<filter token="ontmd.app.build"          value="${ontmd.app.build}" />
 				<filter token="appserver.host"           value="${appserver.host}" />
 				<filter token="ont.service.url"          value="${ont.service.url}" />
-				<filter token="portal.service.url"       value="${portal.service.url}" />
-				<filter token="vine.service.url"         value="${vine.service.url}" />
 				<filter token="ontbrowser.service.url"   value="${ontbrowser.service.url}" />
 				<filter token="bioportal.rest.url"       value="${bioportal.rest.url}" />
 				<filter token="ontmd.pre.uploads.dir"    value="${ontmd.pre.uploads.dir}" />
